refactor:file name and struct to include dto
