# internal/dto/author_dto.go
@@ -1,6 +1,6 @@
 package dto
 
-type AuthorCreateDTO struct {
+type AuthorDTO struct {
 	Name string `json:"name" validate:"required"`
 	Bio  string `json:"bio" validate:"required"`
 }
