# internal/dto/book_dto.go
@@ -1,6 +1,6 @@
 package dto
 
-type BookCreateDTO struct {
+type BookDTO struct {
 	Title         string `json:"title" validate:"required"`
 	Author        string `json:"author" validate:"required"`
 	PublishedYear int    `json:"published_year" validate:"required"`
