# internal/dto/error_dto.go
@@ -3,6 +3,6 @@ package dto
 // Error represents a standard error response.
 // @Description Standard error response
 // @Model
-type Error struct {
+type ErrorDTO struct {
 	Message string `json:"message" example:"An error occurred"`
 }
