# internal/dto/response_dto.go
@@ -3,6 +3,6 @@ package dto
 // Response represents a standard API response structure.
 // @Description Standard response structure for API responses.
 // @Model
-type Response struct {
+type ResponseDTO struct {
 	Message string `json:"message" example:"User created successfully"`
 }
